--- a/sportmates_frontend/app/src/main/res/layout/activity_login.xml
+++ b/sportmates_frontend/app/src/main/res/layout/activity_login.xml
@@ -14,7 +14,7 @@
         android:background="@drawable/gradient_background"
         android:paddingBottom="26dp"
         android:paddingTop="26dp"
-        android:text="@string/app_name"
+        android:text="@string/sportmates_login"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textColor="#FFFFFF"
