Frontend - Responsivity issues with comment section is fixed

--- a/sportmates_frontend/app/src/main/res/layout/layout_child.xml
+++ b/sportmates_frontend/app/src/main/res/layout/layout_child.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_height="wrap_content">
 
+
+    <!--
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="100dp"
-        android:background="@color/colorPrimary">
+        android:background="@color/colorPrimary"
+        >
 
 
         <ImageView
@@ -17,7 +19,8 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_marginLeft="12dp"
-            android:layout_marginTop="12dp" />
+            android:layout_marginTop="12dp"
+            />
 
         <TextView
             android:id="@+id/tvCommentUser"
@@ -60,6 +63,60 @@
 
 
     </RelativeLayout>
+-->
+
+    <LinearLayout
+        android:id="@+id/llUserName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:orientation="vertical">
 
 
-</LinearLayout>
+        <View
+            android:id="@+id/view"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@color/buttonTextColor" />
+
+        <TextView
+            android:id="@+id/tvCommentUser"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_marginEnd="12dp"
+            android:layout_marginTop="6dp"
+            android:gravity="end" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_below="@+id/llUserName"
+        android:layout_weight="8"
+        android:background="@color/colorPrimary"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/imgUserComment"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:layout_weight="1" />
+
+        <TextView
+            android:id="@+id/tvCommentMessage"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="36dp"
+            android:layout_weight="7"
+            android:maxLines="4"
+            android:minLines="1"
+            android:textSize="12sp" />
+
+
+    </LinearLayout>
+
+
+</RelativeLayout>
