--- a/sportmates_frontend/app/src/main/res/layout/activity_event_details.xml
+++ b/sportmates_frontend/app/src/main/res/layout/activity_event_details.xml
@@ -123,7 +123,7 @@
 
 
 
-            <!--<LinearLayout
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="80dp"
@@ -146,7 +146,6 @@
                     android:text="@string/event_end_date" />
 
             </LinearLayout>
-            -->
 
 
             <LinearLayout
